fix: Dashboard tabs should be visible (height 100vh)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1713,7 +1713,7 @@ body {
 .dashboard-view {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   margin: -20px;
 }
 
